package model;

public enum SleepStatus {
    SLEEPING,
    AWAKE
}