package model;

public enum TimeOfDay {
    NIGHT,
    MORNING,
    DAY
}